engine/codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__questions_tests__desktop_async_question_reply.snap
---
source: tui/src/chatwidget/tests/questions_tests.rs
assertion_line: 856
expression: "lines_to_single_string(&cells[0].transcript_lines(80))"
---

› > Same title?
  
  Answer from desktop
